Civiconnect logo in lightmode would disappear after a certain breakpoint on mobile. Fixed.

--- a/src/styles/components/PortfolioItem.module.css
+++ b/src/styles/components/PortfolioItem.module.css
@@ -41,7 +41,6 @@
   .image {
     width: 60%; /* Make the image responsive */
     height: auto; /* Maintain aspect ratio */
-    display: none;
     padding: 1rem;
   }
 }
